# FedFitTech

./: .gitignore  README.md  pyproject.toml  requirements.txt
FedFitTech/: client_app.py  my_strategy.py  server_app.py  task.py
FedFitTech/Results_to_compare/: F1_scores_convergence_linegraph_baseline.eps  result_plots.py  results_ploting_utils.py
FedFitTech/config/: base.yaml
FedFitTech/flwr_utils/: TinyHAR.py  client_utils.py  plotting_functions.py  server_plotting_function.py  utils_for_tinyhar.py
Results_to_compare/: result_plots.py
